<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="88dp"
        android:text="@string/имя"
        android:textAlignment="textStart"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:text="@string/рост"
        android:textAlignment="textStart"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvName" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:text="@string/вес"
        android:textAlignment="textStart"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHeight" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:text="@string/возраст"
        android:textAlignment="textStart"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvWeight" />

    <TextView
        android:id="@+id/tvBodyIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/индекс_тела"
        android:textAlignment="textStart"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAge" />

    <TextView
        android:id="@+id/tvBodyIndexResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/default_value"
        android:textAlignment="textStart"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@id/tvBodyIndex"
        app:layout_constraintTop_toTopOf="@id/tvAge" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="70dp"
        android:textSize="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterOverflowTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/имя"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="76dp"
        android:textSize="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:counterOverflowTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/условие_роста"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="76dp"
        android:textSize="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:counterOverflowTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tilHeight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/условие_веса"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="76dp"
        android:textSize="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:counterOverflowTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tilWeight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/условие_возраста"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/рассчитать"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvBodyIndex" />

</androidx.constraintlayout.widget.ConstraintLayout>